--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.8",
+    "@tailwindcss/vite": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "fs": "^0.0.1-security",
